--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,25 @@
 {
   "name": "screen-env",
   "description": "Differentiate screen types by size, touch ability, and more.",
+  "authors": ["Jacob Phillips (https://github.com/jifalops)"],
+  "license": "MIT",
   "main": "screen-env.html",
+  "keywords": [
+    "screen",
+    "environment",
+    "mobile",
+    "desktop",
+    "tablet",
+    "touch"
+  ],
   "dependencies": {
-    "polymer": "^1.8.1",
-    "iron-media-query": "^1.0.8"
+    "polymer": "^2.0.0",
+    "iron-media-query": "^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "iron-demo-helpers": "^2.0.0",
+    "iron-component-page": "^2.0.0",
+    "web-component-tester": "^6.0.0",
+    "webcomponentsjs": "^1.0.0"
   }
 }
